<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:padding="20dp">

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText_uri"
            android:text="@string/edittext_uri"
            style="@style/editText"/>
    <Button
            android:id="@+id/button_uri"
            android:text="@string/button_uri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="visitWebSite"
            />

    <EditText
            android:id="@+id/editText_loc"
            android:text="@string/edittext_loc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/editText"/>
    <Button
            android:id="@+id/button_loc"
            android:text="@string/button_loc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="openLocation"/>

    <EditText
            android:id="@+id/editText_share"
            android:text="@string/edittext_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/shareText"/>
    <Button
            android:id="@+id/button_share"
            android:text="@string/button_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="shareText"/>

    <View
            android:layout_width="wrap_content"
            android:layout_height="56dp" />
    

</LinearLayout>